# noob-blockchain-rs

./: readme.md
noob_blockchain/: Cargo.toml
noob_blockchain/src/: block.rs  main.rs
noob_starknet/: Cargo.toml
noob_starknet/src/: block.rs  constants.rs  executor.rs  main.rs  state.rs  transaction.rs
