[package]
name = "noob_blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
starknet = "0.5.0"
starknet_api = "0.3.0"
blockifier = { git = "https://github.com/starkware-libs/blockifier" }
tracing = "0.1.37"
